--- a/views/layout/dashboard.handlebars
+++ b/views/layout/dashboard.handlebars
@@ -12,19 +12,18 @@
         <ul>
             <li class="li-inline nav-item"><a href="/">Home</a></li>
             <li class="li-inline nav-item"><a href="/dashboard">Dashboard</a></li>
-            <li class="li-inline nav-item"><a href="/login">Login</a></li>
             <li class="li-inline nav-item"><a href="#" id="logout-link">Logout</a></li>
         </ul>
     </nav>
     <header class="hero">
-        <h1 class="app-title"><a href="/">The Tech Blog</a></h1>
+        <h1 class="app-title"><a href="/dashboard">The Tech Blog</a></h1>
     </header>
     <main class="col-auto">
         {{{body}}}
     </main>
     <footer class="flex-row justify-center">
-        &copy;The Tech Blog
+        <a href="/dashboard/new">New Post</a>
     </footer>
 </body>
-</html>
 <script src="/js/logout.js"></script>
+</html>
